--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,9 @@ a {
     margin: 0;
     padding: 0;
   }
+  #company-name {
+    padding: 0;
+  }
   h1 {
     font-size: 90px;
     padding: 0;
@@ -115,13 +118,13 @@ a {
     padding: 0;
     background-size: cover;
     height: 300px;
-    width: 800px;
+    max-width: 800px;
   }
   .list {
     display: none;
   }
   .quote {
-    margin: 20px 5px;
+    margin: 20px 0;
     padding: 0;
     font-size: 30px;
   }
@@ -140,7 +143,8 @@ a {
     padding: 30px 0;
   }
   #other {
-    margin: 0;
+    margin: 15px 0;
+    padding: 30px 0;
   }
   h3 {
     font-size: 30px;
