--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,10 @@ h3 {
 #menu-container {
   margin: 0 200px;
 }
+a:hover {
+  transition: all 150ms ease-in-out;
+  transform: scale(1.1);
+}
 #cookies {
   border: solid #ab9873 2px;
   border-radius: 15px;
